--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,19 +19,20 @@
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/javascripts/util.js"></script>
-
     <!-- Custom styles for this template-->
     <link href="/assets/css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Custom styles for this page -->
     <link href="/assets/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
-    <script type="text/javascript" src="/javascripts/moment.js"></script>
+    <!-- Bootstrap core JavaScript-->
+    <script src="/assets/vendor/jquery/jquery.min.js"></script>
 
+    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="/javascripts/util.js"></script>
+
+    <script type="text/javascript" src="/javascripts/moment.js"></script>
 
 </head>
 
@@ -71,7 +72,7 @@
 
             <!-- Nav Item - Goods Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="" data-toggle="collapse" data-target="#collapseUtilities"
+                <a class="nav-link" href="" data-toggle="collapse" data-target="#collapseUtilities"
                     aria-expanded="true" aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Goods Utilities</span>
@@ -89,7 +90,7 @@
             </li>
 
             <li class="nav-item<%= path.startsWith('/suppliers') ? ' active' : '' %>">
-                <a class="nav-link collapsed" href="/suppliers" aria-expanded="true" aria-controls="collapseSuppliers">
+                <a class="nav-link" href="/suppliers" aria-expanded="true" aria-controls="collapseSuppliers">
                     <i class="fas fa-fw fa-link"></i>
                     <span>Suppliers</span>
                 </a>
@@ -97,14 +98,14 @@
 
             </li>
             <li class="nav-item<%= path.startsWith('/customers') ? ' active' : '' %>">
-                <a class="nav-link collapsed" href="/customers" aria-expanded="true" aria-controls="collapseCustomers">
+                <a class="nav-link" href="/customers" aria-expanded="true" aria-controls="collapseCustomers">
                     <i class="fas fa-fw fa-users"></i>
                     <span>Customers</span>
                 </a>
             </li>
 
             <li class="nav-item<%= path.startsWith('/users') ? ' active' : '' %>">
-                <a class="nav-link collapsed" href="/users" aria-expanded="true" aria-controls="collapseUsers">
+                <a class="nav-link" href="/users" aria-expanded="true" aria-controls="collapseUsers">
                     <i class="fas fa-fw fa-user"></i>
                     <span>Users</span>
                 </a>
@@ -126,8 +127,8 @@
             </li>
 
             <!-- Nav Item - Sales -->
-            <li class="nav-item">
-                <a class="nav-link" href="#">
+            <li class="nav-item<%= path.startsWith('/sales') ? ' active' : '' %>">
+                <a class="nav-link" href="/sales">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Sales</span></a>
             </li>
