--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,236 +47,26 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <%- include('../partials/sidebar') %>
+            <!-- End of Sidebar -->
 
-            <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dashboards">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
-                <div class="sidebar-brand-text mx-3">POS</div>
-            </a>
+            <!-- Content Wrapper -->
+            <div id="content-wrapper" class="d-flex flex-column">
 
-            <!-- Divider -->
-            <hr class="sidebar-divider my-0">
+                <!-- Main Content -->
+                <div id="content">
 
-            <!-- Nav Item - Dashboard -->
-            <% if(user.role=='Admin' ) { %>
-                <li class="nav-item<%= path.startsWith('/dashboards') ? ' active' : '' %>">
-                    <a class="nav-link" href="/dashboards">
-                        <i class="fas fa-fw fa-tachometer-alt"></i>
-                        <span>Dashboard</span></a>
-                </li>
-                <% } %>
+                    <!-- Topbar -->
+                    <%- include('../partials/topbar') %>
+                        <!-- End of Topbar -->
 
-                    <!-- Divider -->
-                    <hr class="sidebar-divider">
-
-                    <!-- Heading -->
-                    <div class="sidebar-heading">
-                        MASTER
-                    </div>
-
-                    <!-- Nav Item - Goods Utilities Collapse Menu -->
-                    <% if(user.role=='Admin' ) { %>
-                        <li class="nav-item<%= title == 'POS Goods' || title == 'POS Units' ? ' active' : '' %>">
-                            <a class="nav-link" href="" data-toggle="collapse" data-target="#collapseUtilities"
-                                aria-expanded="true" aria-controls="collapseUtilities">
-                                <i class="fas fa-fw fa-wrench"></i>
-                                <span>Goods Utilities</span>
-                            </a>
-                            <div id="collapseUtilities"
-                                class="collapse <%= title == 'POS Goods' || title == 'POS Units' ? ' show' : '' %>"
-                                aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-                                <div class="bg-white py-2 collapse-inner rounded">
-                                    <h6 class="collapse-header">GOODS UTILITIES :</h6>
-                                    <a class="collapse-item<%= path.startsWith('/goods') ? ' active' : '' %>"
-                                        href="/goods">Goods</a>
-                                    <a class="collapse-item<%= path.startsWith('/units') ? ' active' : '' %>"
-                                        href="/units">Units</a>
-                                </div>
-                            </div>
-                        </li>
-                        <% } %>
-
-                            <li class="nav-item<%= path.startsWith('/suppliers') ? ' active' : '' %>">
-                                <a class="nav-link" href="/suppliers" aria-expanded="true"
-                                    aria-controls="collapseSuppliers">
-                                    <i class="fas fa-fw fa-link"></i>
-                                    <span>Suppliers</span>
-                                </a>
-                            </li>
-
-                            </li>
-                            <li class="nav-item<%= path.startsWith('/customers') ? ' active' : '' %>">
-                                <a class="nav-link" href="/customers" aria-expanded="true"
-                                    aria-controls="collapseCustomers">
-                                    <i class="fas fa-fw fa-users"></i>
-                                    <span>Customers</span>
-                                </a>
-                            </li>
-
-                            <% if(user.role=='Admin' ) { %>
-                                <li class="nav-item<%= path.startsWith('/users') ? ' active' : '' %>">
-                                    <a class="nav-link" href="/users" aria-expanded="true"
-                                        aria-controls="collapseUsers">
-                                        <i class="fas fa-fw fa-user"></i>
-                                        <span>Users</span>
-                                    </a>
-                                </li>
-                                <% } %>
-
-                                    <!-- Divider -->
-                                    <hr class="sidebar-divider">
-
-                                    <!-- Heading -->
-                                    <div class="sidebar-heading">
-                                        Transactions
-                                    </div>
-
-                                    <!-- Nav Item - Purchases -->
-                                    <li class="nav-item<%= path.startsWith('/purchases') ? ' active' : '' %>">
-                                        <a class="nav-link" href="/purchases">
-                                            <i class="fas fa-fw fa-table"></i>
-                                            <span>Purchases</span></a>
-                                    </li>
-
-                                    <!-- Nav Item - Sales -->
-                                    <li class="nav-item<%= path.startsWith('/sales') ? ' active' : '' %>">
-                                        <a class="nav-link" href="/sales">
-                                            <i class="fas fa-fw fa-chart-area"></i>
-                                            <span>Sales</span></a>
-                                    </li>
-
-                                    <!-- Divider -->
-                                    <hr class="sidebar-divider d-none d-md-block">
-
-                                    <!-- Sidebar Toggler (Sidebar) -->
-                                    <div class="text-center d-none d-md-inline">
-                                        <button class="rounded-circle border-0" id="sidebarToggle"></button>
-                                    </div>
-
-        </ul>
-        <!-- End of Sidebar -->
-
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-
-            <!-- Main Content -->
-            <div id="content">
-
-                <!-- Topbar -->
-                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-
-                    <!-- Sidebar Toggle (Topbar) -->
-                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                        <i class="fa fa-bars"></i>
-                    </button>
-
-                    <!-- Topbar Search -->
-                    <form
-                        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-
-                    <!-- Topbar Navbar -->
-                    <ul class="navbar-nav ml-auto">
-
-                        <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-                        <li class="nav-item dropdown no-arrow d-sm-none">
-                            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-search fa-fw"></i>
-                            </a>
-                            <!-- Dropdown - Messages -->
-                            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
-                                aria-labelledby="searchDropdown">
-                                <form class="form-inline mr-auto w-100 navbar-search">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control bg-light border-0 small"
-                                            placeholder="Search for..." aria-label="Search"
-                                            aria-describedby="basic-addon2">
-                                        <div class="input-group-append">
-                                            <button class="btn btn-primary" type="button">
-                                                <i class="fas fa-search fa-sm"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </li>
-
-                        <!-- Nav Item - Alerts -->
-                        <% if(user.role=='Admin' ) { %>
-                            <li class="nav-item dropdown no-arrow mx-1">
-                                <a class="nav-link dropdown-toggle" href="" id="alertsDropdown" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-bell fa-fw"></i>
-                                    <!-- Counter - Alerts -->
-                                    <div id="count"></div>
-                                </a>
-                                <!-- Dropdown - Alerts -->
-                                <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                    aria-labelledby="alertsDropdown">
-                                    <h6 class="dropdown-header">
-                                        ALERTS CENTER
-                                    </h6>
-                                    <div id="alert"></div>
-                                </div>
-                            </li>
-
-                            <div class="topbar-divider d-none d-sm-block"></div>
-                            <% } %>
-
-                                <!-- Nav Item - User Information -->
-                                <li class="nav-item dropdown no-arrow">
-                                    <a class="nav-link dropdown-toggle" href="" id="userDropdown" role="button"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <span class="mr-2 d-none d-lg-inline text-gray-600 small">
-                                            <%= user.name %>
-                                        </span>
-                                        <img class="img-profile rounded-circle" src="/assets/img/undraw_profile.svg">
-                                    </a>
-                                    <!-- Dropdown - User Information -->
-                                    <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                        aria-labelledby="userDropdown">
-                                        <a class="dropdown-item" href="/users/profile">
-                                            <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                            Profile
-                                        </a>
-                                        <a class="dropdown-item" href="/users/changepassword">
-                                            <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                            Change Password
-                                        </a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="/logout" data-toggle="modal"
-                                            data-target="#logoutModal">
-                                            <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                            Logout
-                                        </a>
-                                    </div>
-                                </li>
-
-                    </ul>
-
-                </nav>
-                <!-- End of Topbar -->
-
-                <script>
-                    $.get({
-                        url: '/notification/alert'
-                    }).done((data) => {
-                        let html = ''
-                        data.forEach(item => {
-                            html += `
+                        <script>
+                            $.get({
+                                url: '/notification/alert'
+                            }).done((data) => {
+                                let html = ''
+                                data.forEach(item => {
+                                    html += `
                             <a href="/purchases" class="dropdown-item d-flex align-items-center" href="">
                                     <i class="fas fa-exclamation-triangle bg-warning rounded-circle fa-1x px-2 py-2"></i>
                                     <div class="col">
@@ -288,13 +78,13 @@
                                     </div>
                             </a>            
                             `
-                        })
-                        $('#alert').html(html)
-                    })
-                    $.get({
-                        url: '/notification/count'
-                    }).done((data) => {
-                        let html = `<span class="badge badge-danger badge-counter">${data[0].count}+</span>`
-                        $('#count').html(html)
-                    })
-                </script>
+                                })
+                                $('#alert').html(html)
+                            })
+                            $.get({
+                                url: '/notification/count'
+                            }).done((data) => {
+                                let html = `<span class="badge badge-danger badge-counter">${data[0].count}+</span>`
+                                $('#count').html(html)
+                            })
+                        </script>
